Bugfix the navbar showing behind text

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -6,6 +6,7 @@
 
 mat-toolbar {
   position: fixed;
+  z-index: 1;
   button, div, a {
     height: 100%;
   }
